# smolwik

./: Cargo.toml  LICENSE.md  README.md  accounts.json  accounts.toml  config.toml  design.md  dist-workspace.toml
.forgejo/workflows/: build_test.yml
.github/workflows/: build_test.yml  rust.yml
articles/: commonmark.md  index.md
assets/: LICENSE  default.css
pages/: index.md
src/: article.rs  auth.rs  config.rs  error_message.rs  extractors.rs  filesystem.rs  login.rs  main.rs  metadata.rs  page.rs  render.rs  responses.rs  template.rs
src/routes/: admin.rs  articles.rs  auth.rs  discovery.rs  mod.rs
templates/: LICENSE  admin.account.tera  admin.add_account.tera  admin.tera  article.tera  article_create.tera  article_edit.tera  base.tera  discovery.tree.tera  error.tera  error_fallback.tera  login.tera  page.html  page.tera  page_create.html  page_create.tera  page_edit.html  page_edit.tera
