[package]
name = "tinwik"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = [ "macros" ] }
tower-http = { version = "0.6.6", features = ["fs", "trace"] }
tokio = { version = "1.0", features = ["full"] }
pulldown-cmark = { version = "0.13.0" }
tera = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
lto="fat"
strip = true
opt-level = "z"
panic = "abort"

