[package]
name = "smolwik"
version = "0.1.0"
edition = "2024"
authors = ["Michael Johnson <mjohnson@ociaw.com>"]
license = "AGPL-3 AND BSD-2-Clause"
keywords = [ "wiki", "markdown" ]
description = "Small, simple wiki using no database, with home and small-scale usage in mind"

[dependencies]
axum = { version = "0.8.4", features = [ "macros" ] }
axum-extra = {  version = "0.10", features = [ "cookie-signed" ] }
axum-core = { version = "0.5.2" }
http = { version = "1.3" }
tower-http = { version = "0.6.6", features = ["fs", "trace"] }
tracing-subscriber = "0.3.19"
tokio = { version = "1.0", features = ["full"] }
pulldown-cmark = { version = "0.13.0" }
tera = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
serde_json = "1.0"
thiserror = "2.0"
base64 = "0.22"
argon2 = "0.5.3"
# We use an older version of rand_core to match argon2 and avoid pulling in two different versions
rand_core = { version = "^0.6.4" }

[profile.release]
lto="fat"
